Bug 315917 - kontact crashes when saving a distribution list
Summary: kontact crashes when saving a distribution list
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-28 16:41 UTC by Alin M Elena
Modified: 2013-02-28 17:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-02-28 16:41:38 UTC
Application: kontact (4.11 pre)
KDE Platform Version: 4.10.60 "release 84"
Qt Version: 4.8.4
Operating System: Linux 3.8.0-6-desktop x86_64
Distribution: "openSUSE 13.1 Milestone 0 (x86_64)"

-- Information about the crash:
kontact crashes when saving a distribution list from composer.

start writing an email.. add two contacts... and try to save them in a list... put the name of the list and voila... enjoy the crash.

Alin

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbac7e87780 (LWP 28182))]

Thread 4 (Thread 0x7fbaacc29700 (LWP 28183)):
#0  0x00007fbabf54e964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbac2cbc4b5 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fbac2cbc509 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007fbabf54ae0f in start_thread () from /lib64/libpthread.so.0
#4  0x00007fbac53e07dd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fba6c326700 (LWP 28184)):
#0  0x00007fbabf54e964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbac2a00d69 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fbac2cea9fe in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007fbabf54ae0f in start_thread () from /lib64/libpthread.so.0
#4  0x00007fbac53e07dd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fba5e2b7700 (LWP 28212)):
#0  0x00007fbabf54ce25 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007fbabefd3a71 in g_mutex_lock () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbabef96a5d in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbabef96bc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fbac5b571c6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007fbac5b279bf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#6  0x00007fbac5b27c48 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#7  0x00007fbac5a2a0c0 in QThread::exec() () from /usr/lib64/libQtCore.so.4
#8  0x00007fbac5a2d09c in ?? () from /usr/lib64/libQtCore.so.4
#9  0x00007fbabf54ae0f in start_thread () from /lib64/libpthread.so.0
#10 0x00007fbac53e07dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fbac7e87780 (LWP 28182)):
[KCrash Handler]
#5  0x00007fbac5b41ed4 in QObject::connect(QObject const*, char const*, QObject const*, char const*, Qt::ConnectionType) () from /usr/lib64/libQtCore.so.4
#6  0x00007fbac44a00ec in Akonadi::CollectionDialog::Private::changeCollectionDialogOptions (this=this@entry=0x1935220, options=...) at /usr/src/debug/kdepimlibs-git/akonadi/collectiondialog_desktop.cpp:178
#7  0x00007fbac44a0e8a in Private (options=..., parent=0x3bcebf0, customModel=0x0, this=0x1935220) at /usr/src/debug/kdepimlibs-git/akonadi/collectiondialog_desktop.cpp:58
#8  Akonadi::CollectionDialog::CollectionDialog (this=0x3bcebf0, options=..., model=0x0, parent=<optimized out>) at /usr/src/debug/kdepimlibs-git/akonadi/collectiondialog_desktop.cpp:248
#9  0x00007fba63b671c7 in ?? () from /usr/lib64/libmessagecomposer.so.4
#10 0x00007fbac5b3e17f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#11 0x00007fbac5fb6e32 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#12 0x00007fbac5fb6e70 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#13 0x00007fbac5b3d65e in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#14 0x00007fbac653086c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#15 0x00007fbac6534ceb in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#16 0x00007fbac7245226 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#17 0x00007fbac5b28c6e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#18 0x00007fbac5b2c5d1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#19 0x00007fbac5b57013 in ?? () from /usr/lib64/libQtCore.so.4
#20 0x00007fbabef967d5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#21 0x00007fbabef96b08 in ?? () from /usr/lib64/libglib-2.0.so.0
#22 0x00007fbabef96bc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#23 0x00007fbac5b571a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#24 0x00007fbac65d0c1e in ?? () from /usr/lib64/libQtGui.so.4
#25 0x00007fbac5b279bf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#26 0x00007fbac5b27c48 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#27 0x00007fbac69e49c8 in QDialog::exec() () from /usr/lib64/libQtGui.so.4
#28 0x00007fba63b2af7b in MessageComposer::RecipientsEditor::saveDistributionList() () from /usr/lib64/libmessagecomposer.so.4
#29 0x00007fbac5b3e17f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#30 0x00007fbac5b3e17f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#31 0x00007fbac6b95702 in QAbstractButton::clicked(bool) () from /usr/lib64/libQtGui.so.4
#32 0x00007fbac68ea04e in ?? () from /usr/lib64/libQtGui.so.4
#33 0x00007fbac68ea880 in ?? () from /usr/lib64/libQtGui.so.4
#34 0x00007fbac68eaaec in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#35 0x00007fbac6580149 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#36 0x00007fbac653086c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#37 0x00007fbac653554b in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#38 0x00007fbac7245226 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#39 0x00007fbac5b28c6e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#40 0x00007fbac65316ab in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#41 0x00007fbac65abe94 in ?? () from /usr/lib64/libQtGui.so.4
#42 0x00007fbac65aac21 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#43 0x00007fbac65d0fa2 in ?? () from /usr/lib64/libQtGui.so.4
#44 0x00007fbabef967d5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#45 0x00007fbabef96b08 in ?? () from /usr/lib64/libglib-2.0.so.0
#46 0x00007fbabef96bc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#47 0x00007fbac5b571c6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#48 0x00007fbac65d0c1e in ?? () from /usr/lib64/libQtGui.so.4
#49 0x00007fbac5b279bf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#50 0x00007fbac5b27c48 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#51 0x00007fbac5b2c8e8 in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#52 0x0000000000403679 in main (argc=1, argv=0x7fffc8519ec8) at /usr/src/debug/kdepim-git/kontact/src/main.cpp:219

Reported using DrKonqi
Comment 1 Laurent Montel 2013-02-28 17:01:52 UTC
Git commit 864b73e237f55a04a3b3f738b419f98457019636 by Montel Laurent.
Committed on 28/02/2013 at 18:01.
Pushed by mlaurent into branch 'master'.

Fix Bug 315917 - kontact crashes when saving a distribution list

FIXED-IN: 4.11

M  +1    -3    akonadi/collectiondialog_desktop.cpp

http://commits.kde.org/kdepimlibs/864b73e237f55a04a3b3f738b419f98457019636