Fix Bug 315917 - kontact crashes when saving a distribution list

FIXED-IN: 4.11
BUG: 315917